tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_accept.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
y

🟡 [33m[1mrepo[22m needs approval to execute [1m1[22m command:[39m

⚪ post-create:
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m[2m[0m
❓ Allow and remember? [1m[y/N][22m 
🔄 [36mRunning project post-create:[39m
[107m [0m  [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m[2m[0m
[0mtest command
✅ [32m[32mCreated new worktree for [1mtest-approve[22m from [1mmain[22m @ [1m[REPO]/repo.test-approve[39m[22m[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
